// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic link 1`] = `
.c0 {
  font-family: Lato,sans-serif;
}

<a
  className="c0"
  href="https://www.veepee.com/fr-fr/"
  label="Pretty basic button"
>
   
  Pretty basic button
   
</a>
`;

exports[`Basic link with custom css (styled-component) 1`] = `
.c0 {
  font-family: Lato,sans-serif;
}

.c0:hover {
  color: red;
}

<a
  className="c0"
  href="https://www.veepee.com/fr-fr/"
  label="Pretty custom link"
>
   
  Pretty custom link
   
</a>
`;

exports[`Link as button 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  background-color: #0277BD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 10%;
  font-family: Lato,sans-serif;
  text-transform: uppercase;
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 10px;
}

.c0:hover {
  color: #0277BD;
  background-color: white;
  border: solid 1px #0277BD;
}

<a
  className="c0"
  href="https://www.veepee.com/fr-fr/"
  label="Pretty custom button"
>
   
  Pretty custom button
   
</a>
`;

exports[`Link with children 1`] = `
<styled.a
  customStyle={
    Object {
      ":hover": Object {
        "background-color": "white",
        "border": "solid 1px #0277BD",
        "color": "#0277BD",
      },
      "align-items": "center",
      "background-color": "#0277BD",
      "border-radius": "10px",
      "color": "white",
      "display": "flex",
      "font-family": "Lato,sans-serif",
      "height": "40px",
      "justify-content": "center",
      "text-decoration": "none",
      "text-transform": "uppercase",
      "width": "10%",
    }
  }
  href="https://www.veepee.com/fr-fr/"
  label={null}
>
   
  <div
    id="div"
  >
    Click Here
  </div>
   
</styled.a>
`;
